# freesocks

./: .gitattributes  CMakeLists.txt  README.md  freesocks.vcxproj
script/: freesocks  freesocks.json  freesocks.plist  freesocks.service  gfwlist.pac  iptables  openwrt-freesocks  random_table.html  readme  startup.vbs
source/: acceptor.cpp  acceptor.h  connection.cpp  connection.h  hive.cpp  hive.h  logging.h  main.cpp  md5.cpp  md5.h  repeater.h  table_repeater.h  types.h  xxtea_repeater.h
